src/objects/Program_Plan__c.object
<CustomObject>
    <description>CEP Program Plan Object</description>
    <fields>
        <fullName>AOT_Ordered_for_Client__c</fullName>
        <label>AOT Ordered for Client?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_MH_SA_Issues__c</fullName>
        <label>Any MH/SA Issues?</label>
        <picklist>
            <picklistValues>
                <fullName>Serious Mental Health Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse Disorder</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CEP__c</fullName>
        <formula>Client_Name__r.CEP_Num_Old__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CEP #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Coordinator__c</fullName>
        <formula>Client_Name__r.Case_Coordinator__r.FirstName &amp; &apos; &apos; &amp;Client_Name__r.Case_Coordinator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Plans</relationshipLabel>
        <relationshipName>Program_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Diagnosis_New__c</fullName>
        <label>Current Diagnosis (New)</label>
        <picklist>
            <picklistValues>
                <fullName>(33) Intellectual Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(41) Global Developmental Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(41) Unspecified Intellectual Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(42) Language Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(44) Speech Sound Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(45) Childhood-Onset Fluency Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(47) Social Communication Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(49) Unspecified Communication Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(50) Autism Spectrum Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(59) Attention-Deficit/Hyper Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(65) Other Specified AD/H Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(66) Unspecified AD/H Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(66) Specific Learning Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(86) Other Specified Neurodev Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(86) Unspecified Neurodev Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(90) Schizotypal (Personality) Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(90) Delusional Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(94) Brief Psychotic Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(96) Schizophreniform Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(99) Schizophrenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(105) Schizoaffective Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(110) Subst/Med-Induced Psych Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(115) Psych Disorder Due to Medical Cond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(119) Catatonia Assoc w/ Mental Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(120) Catatonic Disorder Due to Med Cond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(121) Unspecified Catatonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(122) Other Spec Schiz Spectrum/Psych</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(122) Unspecified Schiz Spectrum/Psych</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(123) Bipolar I Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(132) Bipolar II Disorder</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Diagnosis__c</fullName>
        <label>Current Diagnosis</label>
        <picklist>
            <picklistValues>
                <fullName>Bipolar Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delusional Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Depressive Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posttraumatic Stress Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schizoaffective Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schizophrenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anxiolytic-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannabis-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogen-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypnotic-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalant-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opioid-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sedative related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stimulant-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Use Disorders</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Diagnosis_for_DOHMH__c</fullName>
        <description>Reporting field for DOHMH that displays a semicolon-separated list of DSM codes without text names</description>
        <label>Current Diagnosis for DOHMH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_First_Objective_Completed__c</fullName>
        <inlineHelpText>The end date of the first objective attached to this program plan to be successfully completed.</inlineHelpText>
        <label>Date First Objective Completed</label>
        <summarizedField>Goal__c.End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Goal__c.Goal_Status__c</field>
            <operation>equals</operation>
            <value>Successful</value>
        </summaryFilterItems>
        <summaryForeignKey>Goal__c.Program_Plan__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Most_Recent_Case_Coordinator_Note__c</fullName>
        <description>Date of most recent Case Coordinator note. Currently only on CIRT Program Plan, may be expanded in the future.</description>
        <label>Date: Most Recent Case Coordinator Note</label>
        <summarizedField>Progress_Note__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Progress_Note__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Case Note, CC CRS Note, CC Progress Note, Progress Note (APT), Progress Note (CCM), Progress Note (CIRT)</value>
        </summaryFilterItems>
        <summaryForeignKey>Progress_Note__c.Program_Plan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Checked_at_Program_Exit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnosis Checked at Program Exit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Explanation_of_Goals__c</fullName>
        <label>Explanation of Goal(s)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Explanation_of_Needs__c</fullName>
        <label>Needs Rationale</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_CC_Note__c</fullName>
        <description>date of first CC Note</description>
        <label>First CC Note</label>
        <summarizedField>Progress_Note__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Progress_Note__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Case Note, CC CRS Note, CC Progress Note</value>
        </summaryFilterItems>
        <summaryForeignKey>Progress_Note__c.Program_Plan__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Goals__c</fullName>
        <label>Goal(s)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Health_Home_Eligible__c</fullName>
        <label>Health Home Eligible</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <formula>Client_Name__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jail_Based_Diagnosis_New__c</fullName>
        <label>Jail-Based Diagnosis (New)</label>
        <picklist>
            <picklistValues>
                <fullName>(33) Intellectual Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(41) Global Developmental Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(41) Unspecified Intellectual Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(42) Language Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(44) Speech Sound Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(45) Childhood-Onset Fluency Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(47) Social Communication Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(49) Unspecified Communication Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(50) Autism Spectrum Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(59) Attention-Deficit/Hyper Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(65) Other Specified AD/H Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(66) Unspecified AD/H Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(66) Specific Learning Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(86) Other Specified Neurodev Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(86) Unspecified Neurodev Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(90) Schizotypal (Personality) Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(90) Delusional Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(94) Brief Psychotic Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(96) Schizophreniform Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(99) Schizophrenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(105) Schizoaffective Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(110) Subst/Med-Induced Psych Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(115) Psych Disorder Due to Medical Cond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(119) Catatonia Assoc w/ Mental Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(120) Catatonic Disorder Due to Med Cond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(121) Unspecified Catatonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(122) Other Spec Schiz Spectrum/Psych</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(122) Unspecified Schiz Spectrum/Psych</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(123) Bipolar I Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(132) Bipolar II Disorder</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Jail_Based_Diagnosis__c</fullName>
        <label>Jail-Based Diagnosis</label>
        <picklist>
            <picklistValues>
                <fullName>Bipolar Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delusional Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Depressive Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posttraumatic Stress Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schizoaffective Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schizophrenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anxiolytic-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannabis-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogen-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypnotic-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalant-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opioid-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sedative related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stimulant-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Use Disorders</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Jail_Based_Diagnosis_for_DOHMH__c</fullName>
        <label>Jail-Based Diagnosis for DOHMH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSCMI_Lookup_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LSCMI Lookup (Admin)</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Program Plans</relationshipLabel>
        <relationshipName>Program_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LSCMI_Results_Formula__c</fullName>
        <formula>&quot;Result: &quot; &amp;  text(LSCMI_Lookup_Admin__r.LSCMI_Result__c)
&amp; BR() &amp; &quot;Strengths: &quot; &amp;  LSCMI_Lookup_Admin__r.LSCMI_Strengths__c 
&amp; BR() &amp; &quot;Criminal History: &quot; &amp;  LSCMI_Lookup_Admin__r.LSCMI_Subscale_1_Criminal_History__c 
&amp; BR() &amp; &quot;Education/Employment: &quot; &amp;  LSCMI_Lookup_Admin__r.LSCMI_Subscale_2_Education_Employment__c
&amp; BR() &amp; &quot;Family/Marital: &quot; &amp;  LSCMI_Lookup_Admin__r.LSCMI_Subscale_3_Family_Marital__c 
&amp; BR() &amp; &quot;Leisure/Recreation: &quot; &amp;  LSCMI_Lookup_Admin__r.LSCMI_Subscale_4_Leisure_Recreation__c
&amp; BR() &amp; &quot;Companions: &quot; &amp;  LSCMI_Lookup_Admin__r.LSCMI_Subscale_5_Companions__c
&amp; BR() &amp; &quot;Alcohol/Drug Problem: &quot; &amp;  LSCMI_Lookup_Admin__r.LSCMI_Subscale_6_Alcohol_Drug_Problem__c 
&amp; BR() &amp; &quot;Pro-Criminal Attitude: &quot; &amp;  LSCMI_Lookup_Admin__r.LSCMI_Subscale_7_Pro_criminal_Attitude__c
&amp; BR() &amp; &quot;Antisocial Pattern: &quot; &amp;  LSCMI_Lookup_Admin__r.LSCMI_Subscale_8_Anti_social_Pattern__c</formula>
        <label>LSCMI Results</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_CC_Note__c</fullName>
        <description>Latest date CC note was written</description>
        <label>Last CC Note</label>
        <summarizedField>Progress_Note__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Progress_Note__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Case Note, CC CRS Note, CC Progress Note</value>
        </summaryFilterItems>
        <summaryForeignKey>Progress_Note__c.Program_Plan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Incident_Note__c</fullName>
        <description>Latest date of an incident note. Was Max(Date), with criteria of Record Type equals Incident Note, but I need to turn it off to test problem with Last CC Note.</description>
        <label>Last Incident Note</label>
        <summarizedField>Progress_Note__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Progress_Note__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Incident Report</value>
        </summaryFilterItems>
        <summaryForeignKey>Progress_Note__c.Program_Plan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Monthly_Report__c</fullName>
        <description>Latest date a Monthly Participant Report note was written</description>
        <label>Last Monthly Report</label>
        <summarizedField>Progress_Note__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Progress_Note__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Monthly Particpant Report</value>
        </summaryFilterItems>
        <summaryForeignKey>Progress_Note__c.Program_Plan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mental_Illness__c</fullName>
        <label>Mental Illness</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Report__c</fullName>
        <description>CJC and JS. Are Monthly reports due to external agencies for participant. Wanted to set default based on contact.criminal justice involvement = probation but at this point SF does not allow xobject formulas in default fields.</description>
        <label>Monthly Report</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Program_Plan_Old__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Progress notes and CRS notes should be attached to the Program Plan with this box checked. Each client only has one Most Recent Program Plan.</description>
        <label>Most Recent Program Plan Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Program_Plan__c</fullName>
        <formula>Client_Name__r.Most_Recent_Program_Plan__c = Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most Recent Program Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs__c</fullName>
        <description>Client needs</description>
        <inlineHelpText>Select all that apply for service plan goals</inlineHelpText>
        <label>Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Care Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Legal Supports and Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education/Vocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Reunification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income/Public Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Tx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation/Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehabilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social/Community Supports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse Tx</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Note_due__c</fullName>
        <description>Are any notes due?</description>
        <formula>case( Client_Name__r.RecordTypeId,
&apos;012600000004zC5&apos;,&apos;&apos;,
&apos;012600000005Jqs&apos;,if(or(today()-Last_CC_Note__c &gt;=7, and( today()-Client_Name__r.Current_Intake_Date__c&gt;=7,isblank(First_CC_Note__c))),&apos;Weekly Note is Due&apos;,&apos;&apos;)&amp;if(and( Program_Plan_Locked__c = true,today()-Last_Monthly_Report__c &gt;=30),&apos;  Monthly Report Due&apos;,&apos;&apos;),
&apos;&apos;)</formula>
        <label>Note due</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Objectives_Achieved__c</fullName>
        <label>Number of Objectives Achieved</label>
        <summaryFilterItems>
            <field>Goal__c.Goal_Status__c</field>
            <operation>equals</operation>
            <value>Successful</value>
        </summaryFilterItems>
        <summaryForeignKey>Goal__c.Program_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_Mental_Illness__c</fullName>
        <inlineHelpText>Please describe the client&apos;s mental illness(es) here.</inlineHelpText>
        <label>Other Mental Illness</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Substance_Related_Disorder__c</fullName>
        <inlineHelpText>If you selected &quot;Other&quot; in the Substance-related Disorders picklist above, please explain here.</inlineHelpText>
        <label>Other Substance-Related Disorder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P_C_ID__c</fullName>
        <description>get P/C ID from contact</description>
        <formula>Client_Name__r.P_C_ID__c</formula>
        <label>P/C ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Plan_Completed_On__c</fullName>
        <description>Date Completed By button was pushed</description>
        <label>Program Plan Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Plan_Completed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the person who clicked on the Completed Button</description>
        <label>Program Plan Completed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Program_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Plan_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Program Plan Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Plan_Notes__c</fullName>
        <label>Program Plan Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Responsive_Needs__c</fullName>
        <label>Risk-Responsive Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Antisocial Associates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antisocial Cognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antisocial Personality Pattern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family/Marital Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure/Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School/Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Serious_Mental_Illness__c</fullName>
        <inlineHelpText>Please select all that apply. If &apos;Other,&apos; please provide details in the text field below.</inlineHelpText>
        <label>Serious Mental Illness</label>
        <picklist>
            <picklistValues>
                <fullName>Bipolar Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delusional Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Depressive Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posttraumatic Stress Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schizoaffective Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schizophrenia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stage_of_Change__c</fullName>
        <label>Stage of Change</label>
        <picklist>
            <picklistValues>
                <fullName>Precontemplation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contemplation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_Problem__c</fullName>
        <label>Substance Abuse Problem</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Substance_related_Disorders__c</fullName>
        <label>Substance-related Disorders</label>
        <picklist>
            <picklistValues>
                <fullName>Alcohol-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anxiolytic-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannabis-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogen-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypnotic-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalant-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opioid-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sedative related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stimulant-related Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Use Disorders</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WRNA_Lookup_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WRNA Lookup (Admin)</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Program Plans (WRNA Lookup (Admin))</relationshipLabel>
        <relationshipName>Program_Plans_WRNA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WRNA_Results__c</fullName>
        <formula>&quot;Risk Factors: &quot; &amp; WRNA_Lookup_Admin__r.WRNA_Risk_Factors__c &amp; BR()
&amp; &quot;Strengths: &quot; &amp;  WRNA_Lookup_Admin__r.WRNA_Strengths__c</formula>
        <label>WRNA Results</label>
        <type>Text</type>
    </fields>
    <label>Program Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>